crates/core/tests/snapshots/field_extend_test__field_extend__can_set_string.snap
---
source: crates/core/tests/field_extend_test.rs
expression: pretty(container.impl_partial_extends_from())
---
fn extends_from(&self) -> Option<schematic::ExtendsFrom> {
    self.a.as_ref().map(|inner| schematic::ExtendsFrom::String(inner.to_owned()))
}
